# blog_django

./: .env.example  .gitignore  Makefile  README.md  manage.py  mypy.ini  pyproject.toml  requirements.txt  schema.yml  test.html  test_list.md  uwsgi.ini  部署文档.md
apps/articles/: admin.py  models.py  selectors.py  serializers.py  services.py  urls.py  views.py
apps/articles/management/commands/: import_legacy_data.py  import_legacy_json.py  migrate_source_markdown_path_to_static_temp.py
apps/articles/migrations/: 0001_initial.py  0002_collection.py  0003_article_read_minutes.py  0004_backfill_article_read_minutes_with_images.py
apps/articles/tests/: test_admin_media_api.py  test_article_api.py  test_html_to_markdown.py  test_markdown_local_images.py  test_markdown_toc.py  test_read_minutes.py
apps/common/: exceptions.py  logging_utils.py  middleware.py  pagination.py  responses.py
apps/common/tests/: test_exceptions_api.py  test_exceptions_unit.py
apps/users/: admin.py  models.py  serializers.py  urls.py  views.py
apps/users/management/commands/: gentoken.py
apps/users/migrations/: 0001_initial.py
apps/users/tests/: test_auth_api.py
blog_project/: asgi.py  settings.py  urls.py  wsgi.py
config/: __init__.py  asgi.py  urls.py  wsgi.py
config/settings/: base.py  dev.py  prod.py
scripts/: export_legacy_mysql_to_json.py  init_mysql8.sql  migrate_legacy_without_html.py  setup_mysql8.py
